refactor(build_and_run): excluded /api/* so that those files are not compiled when dealing with CLI run